welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:5: error: not found: value c
		setCouleurBrosse((c))
                                  ^MethodsPicture:42: error: not enough arguments for method Motif: (c: java.awt.Color)Unit.
Unspecified value parameter c.
				Motif()
                                     ^MethodsPicture:54: error: not found: value faireV
faireV(Color.YELLOW)
^MethodsPicture:55: error: not found: value faireV
faireV(Color.RED)
^MethodsPicture:56: error: not found: value faireV
faireV(Color.BLUE)
^MethodsPicture:57: error: not found: value faireV
faireV(Color.GREEN)
^MethodsPicture:36: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime83.MethodsPicture'
override def run()
             ^